--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       });
     </script>
     </div>
-    <div style="border:solid 1px black; width:200px; height:30p; margin:auto; text-align:center" onclick=""></div>
+    <div style="border:solid 1px black; width:200px; height:30px; margin:auto; text-align:center" onclick=""></div>
     </div>
   </body>
 </html>
