--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       });
     </script>
     </div>
-    <div style="border:solid 1px black; width:200px; height:30px; margin:auto; text-align:center" onclick=""></div>
+    <div style="border:solid 1px rgb(255, 0, 0); width:200px; height:30px; margin:auto; text-align:center" onclick=""></div>
+    <div style="border:solid 1px rgb(30, 255, 0); width:200px; height:30px; margin:auto; text-align:center" onclick=""></div>
     </div>
   </body>
 </html>
