--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body style="text-align: center">
     <canvas id="unity-canvas" width=430 height=752 style="width: 430px; height: 752px; background: #231F20"></canvas>
     <script src="Build/Builds.loader.js"></script>
+    <script>var unityInstance = UnityLoader.Instantiate("unityContainer","Build/_Build.json",{onprogress: UnityProgress}); </script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -16,8 +17,8 @@
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
       }
-
-      var unityInstance = createUnityInstance(document.querySelector("#unity-canvas"), {
+      
+      createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/Builds.data.unityweb",
         frameworkUrl: "Build/Builds.framework.js.unityweb",
         codeUrl: "Build/Builds.wasm.unityweb",
@@ -30,7 +31,7 @@
       });
     </script>
     </div>
-    <div style="border:solid 1px rgb(255, 0, 0); width:200px; height:30px; margin:auto; text-align:center" onclick="unityInstance.SendMessage('ZemtokStudioManager','ChangeClothes',102000100)">Toki</div>
+    <div style="border:solid 1px rgb(200, 255, 0); width:200px; height:30px; margin:auto; text-align:center" onclick="unityInstance.SendMessage('ZemtokStudioManager','ChangeClothes',102000100)">Toki</div>
     <div style="border:solid 1px rgb(212, 0, 255); width:200px; height:30px; margin:auto; text-align:center" onclick="unityInstance.SendMessage('ZemtokStudioManager','ChangeClothes',102000200)">Zemi</div>
     </div>
   </body>
