texture change test

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
             {
               unityInstance.SendMessage('ZemtokStudioManager','ChangeClothesStr', event.data[1]);
             }
+            else if(event.data[1] == 'texture')
+            {
+              unityInstance.SendMessage('ZemtokStudioManager','ChangeTextureUrl', event.data[1]);
+            }
           });
         }).catch((message) => {
           alert(message);
